--- a/feb_pipeline/feb_pipepline.ipynb
+++ b/feb_pipeline/feb_pipepline.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from skopt import Optimizer\n",
     "from skopt.learning import GaussianProcessRegressor\n",
@@ -34,9 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# первые n_initial_points модель не обучается\n",
@@ -78,9 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "kernel = Product(ConstantKernel(1), RBF(1)) + ConstantKernel(1)\n",
@@ -109,9 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def write_input_file(worker_name, input_data):\n",
@@ -190,13 +175,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parallel with multiproccesing\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Queue, Pool, Manager"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def worker_do_job(q_in, q_out):\n",
+    "    while True:\n",
+    "        data = q_in.get()\n",
+    "        create_job() #??        \n",
+    "        result = read_output_file() #?? Do one file\n",
+    "        q_out.put(result)        \n",
+    "    return     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pool = Pool(batch_size) \n",
+    "m = Manager()\n",
+    "q_in = m.Queue()\n",
+    "q_out = m.Queue()\n",
+    "pool.starmap_async(worker_do_job, [(q_in, q_out)]*batch_size)\n",
+    "\n",
+    "X = optimizer.ask(n_points=batch_size)\n",
+    "for i in range(batch_size):\n",
+    "    inp = write_input_file(worker_name, X[i]) #??\n",
+    "    q_in.put(inp)\n",
+    "\n",
+    "for i in tqdm(range(n_calls-batch_size)): \n",
+    "    x, y  = q_out.get()\n",
+    "    optimizer.tell(x, y)\n",
+    "    \n",
+    "    inp_path_file = write_input_file(optimizer.ask()) #??\n",
+    "    q_in.put(inp_path_file)\n",
+    "    \n",
+    "for i in range(batch_size):\n",
+    "    x, y  = q_out.get()\n",
+    "    optimizer.tell(x, y)        \n",
+    "    \n",
+    "pool.terminate()"
+   ]
   }
  ],
  "metadata": {
@@ -215,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
